crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F405_F405.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- - kind:
      name: UndefinedLocalWithImportStarUsage
      body: "`name` may be undefined, or defined from star imports: `mymodule`"
      suggestion: ~
      fixable: false
    location:
      row: 5
      column: 10
    end_location:
      row: 5
      column: 14
    fix: ~
    parent: ~
  - kind:
      name: UndefinedLocalWithImportStarUsage
      body: "`a` may be undefined, or defined from star imports: `mymodule`"
      suggestion: ~
      fixable: false
    location:
      row: 11
      column: 0
    end_location:
      row: 11
      column: 7
    fix: ~
    parent: ~

