crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F501_F50x.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F50x.py:1:1: F501 `%`-format string has invalid format string: incomplete format
  |
1 | '%(foo)' % {'foo': 'bar'}  # F501
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ F501
2 | '%s %(foo)s' % {'foo': 'bar'}  # F506
3 | '%(foo)s %s' % {'foo': 'bar'}  # F506
  |


