crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F503_F503.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    name: PercentFormatExpectedSequence
    body: "`%`-format string expected sequence but got mapping"
    commit: ~
    fixable: false
  location:
    row: 17
    column: 0
  end_location:
    row: 17
    column: 24
  fix: ~
  parent: ~
- kind:
    name: PercentFormatExpectedSequence
    body: "`%`-format string expected sequence but got mapping"
    commit: ~
    fixable: false
  location:
    row: 18
    column: 0
  end_location:
    row: 18
    column: 28
  fix: ~
  parent: ~
- kind:
    name: PercentFormatExpectedSequence
    body: "`%`-format string expected sequence but got mapping"
    commit: ~
    fixable: false
  location:
    row: 23
    column: 0
  end_location:
    row: 23
    column: 42
  fix: ~
  parent: ~

