crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F503_F50x.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F50x.py:10:1: F503 `%`-format string expected sequence but got mapping
   |
10 | '%(bar)s' % {'bar': 1, 'baz': 2}  # F504
11 | '%(bar)s' % (1, 2, 3)  # F502
12 | '%s %s' % {'k': 'v'}  # F503
   | ^^^^^^^^^^^^^^^^^^^^ F503
13 | '%(bar)*s' % {'bar': 'baz'}  # F506, F508
   |


