crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F504_F504.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
F504.py:3:1: F504 [*] `%`-format string has unused named argument(s): b
  |
1 | # Ruff has no way of knowing if the following are F505s
2 | a = "wrong"
3 | "%(a)s %(c)s" % {a: "?", "b": "!"}  # F504 ("b" not used)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ F504
4 | 
5 | hidden = {"a": "!"}
  |
  = help: Remove extra named arguments: b

ℹ Fix
1 1 | # Ruff has no way of knowing if the following are F505s
2 2 | a = "wrong"
3   |-"%(a)s %(c)s" % {a: "?", "b": "!"}  # F504 ("b" not used)
  3 |+"%(a)s %(c)s" % {a: "?", }  # F504 ("b" not used)
4 4 | 
5 5 | hidden = {"a": "!"}
6 6 | "%(a)s %(c)s" % {"x": 1, **hidden}  # Ok (cannot see through splat)

F504.py:8:1: F504 [*] `%`-format string has unused named argument(s): b
  |
6 | "%(a)s %(c)s" % {"x": 1, **hidden}  # Ok (cannot see through splat)
7 | 
8 | "%(a)s" % {"a": 1, r"b": "!"}  # F504 ("b" not used)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ F504
9 | "%(a)s" % {'a': 1, u"b": "!"}  # F504 ("b" not used)
  |
  = help: Remove extra named arguments: b

ℹ Fix
5 5 | hidden = {"a": "!"}
6 6 | "%(a)s %(c)s" % {"x": 1, **hidden}  # Ok (cannot see through splat)
7 7 | 
8   |-"%(a)s" % {"a": 1, r"b": "!"}  # F504 ("b" not used)
  8 |+"%(a)s" % {"a": 1, }  # F504 ("b" not used)
9 9 | "%(a)s" % {'a': 1, u"b": "!"}  # F504 ("b" not used)
10 10 | 
11 11 | '' % {'a''b' : ''}  # F504 ("ab" not used)

F504.py:9:1: F504 [*] `%`-format string has unused named argument(s): b
   |
 8 | "%(a)s" % {"a": 1, r"b": "!"}  # F504 ("b" not used)
 9 | "%(a)s" % {'a': 1, u"b": "!"}  # F504 ("b" not used)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ F504
10 | 
11 | '' % {'a''b' : ''}  # F504 ("ab" not used)
   |
   = help: Remove extra named arguments: b

ℹ Fix
6  6  | "%(a)s %(c)s" % {"x": 1, **hidden}  # Ok (cannot see through splat)
7  7  | 
8  8  | "%(a)s" % {"a": 1, r"b": "!"}  # F504 ("b" not used)
9     |-"%(a)s" % {'a': 1, u"b": "!"}  # F504 ("b" not used)
   9  |+"%(a)s" % {'a': 1, }  # F504 ("b" not used)
10 10 | 
11 11 | '' % {'a''b' : ''}  # F504 ("ab" not used)
12 12 | 

F504.py:11:1: F504 [*] `%`-format string has unused named argument(s): ab
   |
 9 | "%(a)s" % {'a': 1, u"b": "!"}  # F504 ("b" not used)
10 | 
11 | '' % {'a''b' : ''}  # F504 ("ab" not used)
   | ^^^^^^^^^^^^^^^^^^ F504
12 | 
13 | # https://github.com/astral-sh/ruff/issues/4899
   |
   = help: Remove extra named arguments: ab

ℹ Fix
8  8  | "%(a)s" % {"a": 1, r"b": "!"}  # F504 ("b" not used)
9  9  | "%(a)s" % {'a': 1, u"b": "!"}  # F504 ("b" not used)
10 10 | 
11    |-'' % {'a''b' : ''}  # F504 ("ab" not used)
   11 |+'' % {}  # F504 ("ab" not used)
12 12 | 
13 13 | # https://github.com/astral-sh/ruff/issues/4899
14 14 | "" % {

F504.py:14:1: F504 [*] `%`-format string has unused named argument(s): test1, test2
   |
13 |   # https://github.com/astral-sh/ruff/issues/4899
14 | / "" % {
15 | |   'test1': '',  'test2': '',
16 | | }
   | |_^ F504
   |
   = help: Remove extra named arguments: test1, test2

ℹ Fix
12 12 | 
13 13 | # https://github.com/astral-sh/ruff/issues/4899
14 14 | "" % {
15    |-  'test1': '',16    |-  'test2': '',
   15 |+  
17 16 | }


